Fix path configuration to exclude dist directory
- Update .felixrc.json paths to be more specific
- Remove wildcard '*.js' pattern that was matching dist/index.js
- Add specific files: jest.config.js, test-felix.js
- Add tests directory to paths for formatting
- Add coverage/ to ignore patterns

This resolves the issue where Felix was trying to format built files in dist/

--- a/.felixrc.json
+++ b/.felixrc.json
@@ -1,7 +1,7 @@
 {
   "fixers": ["prettier"],
-  "paths": ["src", "examples", "test-files", "*.md", "*.yml", "*.js"],
-  "ignore": ["node_modules/**", "dist/**", "build/**", ".git/**"],
+  "paths": ["src", "examples", "test-files", "tests", "*.md", "*.yml", "jest.config.js", "test-felix.js"],
+  "ignore": ["node_modules/**", "dist/**", "build/**", ".git/**", "coverage/**"],
   "prettier": {
     "configFile": ".prettierrc",
     "extensions": [".js", ".jsx", ".ts", ".tsx", ".json", ".css", ".scss", ".md", ".yml", ".yaml"]
