Separate CI testing config from repository tooling config
- Create .felixrc.ci.json for CI testing that processes test-files
- Keep .felixrc.json for repository tooling that ignores test-files
- Update CI workflow to use config_path: '.felixrc.ci.json'
- This cleanly separates concerns: CI validates Felix works, repo config formats source code
- CI will now properly detect formatting issues in test-files during dry-run

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -73,9 +73,8 @@ jobs:
       - name: Test Fix-it Felix (dry-run)
         uses: ./
         with:
-          fixers: 'prettier,markdownlint'
+          config_path: '.felixrc.ci.json'
           dry_run: true
-          paths: 'test-files'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
