Fix dogfood config and integration test detached HEAD
- Remove *.yml from paths and add .github/** to ignore in .felixrc.json
  This prevents dogfood job from formatting workflow files
- Add ref: github.head_ref to integration test checkout
  This fixes the detached HEAD issue preventing git push
- Dogfood will now only format actual source code, not CI config files

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -118,6 +118,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
+          ref: ${{ github.head_ref }}
 
       - name: Test Fix-it Felix (real run)
         uses: ./
