Fix integration test permissions and remove default paths
REAL FIXES:
- Remove default: '.' from action.yml paths input
  This was causing integration test to process all files instead of using config
- Add workflow permissions to integration test
  This allows it to push commits that modify workflow files
- Now integration test will use .felixrc.json config properly

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -111,6 +111,9 @@ jobs:
   integration-test:
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
+    permissions:
+      contents: write
+      pull-requests: write
 
     steps:
       - name: Checkout
