--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,34 +32,7 @@ jobs:
       - name: Package action
         run: npm run package
 
-  # Dogfood: Use Felix on this repo itself
-  dogfood:
-    runs-on: ubuntu-latest
-    needs: test
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Debug dogfood environment
-        run: |
-          echo "=== Dogfood Debug Info ==="
-          echo "Event: ${{ github.event_name }}"
-          echo "Ref: ${{ github.ref }}"
-          echo "Working directory contents:"
-          ls -la
-          echo "Felix config:"
-          cat .felixrc.json || echo "No .felixrc.json found"
-          echo "=========================="
-
-      - name: Test Fix-it Felix on this repo (dogfood)
-        uses: ./
-        with:
-          dry_run: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  # Test functionality: Verify Felix detects formatting issues
+  # Test functionality: Verify Felix detects formatting issues (dry run)
   test-functionality:
     runs-on: ubuntu-latest
     needs: test
@@ -87,18 +60,7 @@ jobs:
           And too many blank lines.
           EOF
 
-      - name: Debug functionality test environment  
-        run: |
-          echo "=== Functionality Test Debug Info ==="
-          echo "Created test files:"
-          ls -la temp-test/
-          echo "temp-test/bad.js contents:"
-          cat temp-test/bad.js
-          echo "temp-test/bad.md contents:"
-          cat temp-test/bad.md
-          echo "====================================="
-
-      - name: Test Fix-it Felix functionality
+      - name: Test Fix-it Felix functionality (dry run)
         uses: ./
         with:
           fixers: 'prettier,markdownlint'
@@ -107,9 +69,39 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  # Integration test: Real commit mode (only on PRs)
-  integration-test:
+  # Check for uncommitted dist changes
+  check-dist:
     runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Check if dist is up to date
+        run: |
+          npm run build
+          if ! git diff --quiet dist/; then
+            echo "❌ dist/ folder is not up to date. Please run 'npm run build' and commit the changes."
+            git diff dist/
+            exit 1
+          else
+            echo "✅ dist/ folder is up to date."
+          fi
+
+  # Dogfood: Actually fix formatting issues in this repo (real run)
+  dogfood:
+    runs-on: ubuntu-latest
+    needs: [test, test-functionality, check-dist]
     if: github.event_name == 'pull_request'
     permissions:
       contents: write
@@ -123,10 +115,9 @@ jobs:
           fetch-depth: 0
           ref: ${{ github.head_ref }}
 
-      - name: Test Fix-it Felix (real run)
+      - name: Fix formatting issues with Felix (real run)
         uses: ./
         with:
-          fixers: 'prettier'
-          commit_message: '🧪 Test commit from Fix-it Felix'
+          commit_message: '🤖 Fix-it Felix: Auto-fix formatting issues'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
