Dogfood custom command feature in project
- Add lint:fix and format:fix npm scripts
- Configure .felixrc.json to use custom commands instead of built-in tools
- Fix ESLint config to avoid @typescript-eslint/recommended dependency issues
- Now Felix will use 'npm run lint:fix' and 'npm run format:fix' commands
- Set appendPaths: false since npm scripts define their own file patterns

This demonstrates the custom command feature working in a real project.

--- a/.felixrc.json
+++ b/.felixrc.json
@@ -1,9 +1,13 @@
 {
-  "fixers": ["prettier"],
+  "fixers": ["eslint", "prettier"],
   "paths": ["src", "examples", "tests", "*.md", "jest.config.js", "test-felix.js"],
   "ignore": ["node_modules/**", "dist/**", "build/**", ".git/**", "coverage/**", "test-files/**", "package.json", "package-lock.json", ".github/**"],
+  "eslint": {
+    "command": ["npm", "run", "lint:fix"],
+    "appendPaths": false
+  },
   "prettier": {
-    "configFile": ".prettierrc",
-    "extensions": [".js", ".jsx", ".ts", ".tsx", ".json", ".css", ".scss", ".md", ".yml", ".yaml"]
+    "command": ["npm", "run", "format:fix"],
+    "appendPaths": false
   }
 }
