--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -145,6 +145,15 @@ jobs:
           fetch-depth: 0
           ref: ${{ github.head_ref }}
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
       # Note: Using FELIX_PAT (Personal Access Token) if available, otherwise GITHUB_TOKEN
       # GitHub's GITHUB_TOKEN won't trigger workflows on commits it creates (security feature)
       # With PAT, Felix commits will trigger workflows so check-dist and other required jobs run
