refactor: Update all configuration examples to use new inline format
Update all .felixrc.json files and documentation examples to demonstrate the new inline fixer configuration format:

- Update root .felixrc.json to use inline format
- Update examples/.felixrc.json with comprehensive inline examples
- Update README.md configuration examples
- Add mixed format examples to show flexibility
- Maintain backward compatibility notes

This provides users with working examples of the new format while keeping the repository's own configuration up-to-date.

--- a/.felixrc.json
+++ b/.felixrc.json
@@ -1,14 +1,17 @@
 {
-  "fixers": ["eslint", "prettier"],
+  "fixers": [
+    {
+      "name": "eslint",
+      "command": ["npm", "run", "lint:fix"],
+      "appendPaths": false
+    },
+    {
+      "name": "prettier",
+      "command": ["npm", "run", "format:fix"],
+      "appendPaths": false
+    }
+  ],
   "paths": ["src", "examples", "tests", "*.md", "jest.config.js", "test-felix.js"],
   "ignore": ["node_modules/**", "dist/**", "build/**", ".git/**", "coverage/**", "test-files/**", "package.json", "package-lock.json", ".github/**"],
-  "_comment": "Using custom commands to demonstrate the feature. In production, ensure 'npm ci' runs before Felix.",
-  "eslint": {
-    "command": ["npm", "run", "lint:fix"],
-    "appendPaths": false
-  },
-  "prettier": {
-    "command": ["npm", "run", "format:fix"],
-    "appendPaths": false
-  }
+  "_comment": "Using custom commands to demonstrate the new inline configuration format. In production, ensure 'npm ci' runs before Felix."
 }
