Fix npm script glob patterns to include root-level files
- Update format:fix to use '{src,tests}/**/*.ts' pattern
- Fix lint and lint:fix scripts to match files at any depth
- Ensures src/felix.ts and other root-level files are included in formatting

--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "package": "npm run build",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint --fix src/**/*.ts tests/**/*.ts",
-    "format": "prettier --write src/**/*.ts",
-    "format:fix": "prettier --write src/**/*.ts tests/**/*.ts examples/**/*.json *.md"
+    "lint": "eslint 'src/**/*.ts'",
+    "lint:fix": "eslint --fix '{src,tests}/**/*.ts'",
+    "format": "prettier --write 'src/**/*.ts'",
+    "format:fix": "prettier --write '{src,tests}/**/*.ts' examples/**/*.json *.md"
   },
   "repository": {
     "type": "git",
