--- a/.felixrc.json
+++ b/.felixrc.json
@@ -1,6 +1,6 @@
 {
   "fixers": ["eslint", "prettier"],
-  "paths": ["src", "examples", "tests", "*.md", "jest.config.js", "test-felix.js"],
+  "paths": ["src/**", "examples/**", "tests/**", "*.md", "jest.config.js", "test-felix.js"],
   "ignore": ["node_modules/**", "dist/**", "build/**", ".git/**", "coverage/**", "test-files/**", "package.json", "package-lock.json", ".github/**"],
   "_comment": "Using custom commands to demonstrate the feature. In production, ensure 'npm ci' runs before Felix.",
   "eslint": {
