Add configurable debug logging for file filtering and workflow troubleshooting
- Add 'debug' input parameter to enable verbose logging
- Fix oxlint file filtering bug (was processing all files instead of filtering by extensions)
- Add detailed debug logging for file filtering decisions
- Add debug logging for commit and push operations to help troubleshoot workflow triggering issues
- Debug output includes file extension matching, path matching, and filtered results
- All debug logging is opt-in and uses clear 🔍 Debug: prefixes

--- a/action.yml
+++ b/action.yml
@@ -40,6 +40,11 @@ inputs:
     description: 'Comma-separated list of paths to run fixers on (e.g., src,docs)'
     required: false
 
+  debug:
+    description: 'Enable verbose debug logging for file filtering and fixer operations'
+    required: false
+    default: 'false'
+
 outputs:
   fixes_applied:
     description: 'Whether any fixes were applied'
