Enable debug logging for dogfooding workflows
- Add debug: true to both test-functionality (dry-run) and dogfood (real run) jobs
- This will show comprehensive debug output for file filtering and workflow troubleshooting
- Helps validate the new debug logging features work correctly in practice

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,6 +66,7 @@ jobs:
           fixers: 'prettier,markdownlint'
           paths: 'temp-test'
           dry_run: true
+          debug: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -161,5 +162,6 @@ jobs:
         uses: ./
         with:
           commit_message: '🤖 Fix-it Felix: Auto-fix formatting issues'
+          debug: true
         env:
           GITHUB_TOKEN: ${{ secrets.FELIX_PAT || secrets.GITHUB_TOKEN }}
