Add skip_draft_prs configuration option
- Add new skip_draft_prs input parameter to action.yml
- Implement draft PR checking in shouldSkip() method
- Add comprehensive tests for draft PR functionality
- Update documentation in README.md and CONFIGURATION.md
- Update advanced usage example to demonstrate the feature

This feature allows users to configure Felix to skip processing
draft PRs entirely by setting skip_draft_prs: true, providing
more control over when automatic fixes are applied.

--- a/examples/advanced-usage.yml
+++ b/examples/advanced-usage.yml
@@ -34,6 +34,7 @@ jobs:
           commit_message: '🤖 Fix-it Felix: Automated code quality improvements'
           config_path: '.felixrc.json'
           skip_label: 'no-autofix'
+          skip_draft_prs: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
