--- a/action.yml
+++ b/action.yml
@@ -49,6 +49,11 @@ inputs:
     required: false
     default: 'false'
 
+  skip_draft_prs:
+    description: 'Skip processing draft pull requests'
+    required: false
+    default: 'false'
+
 outputs:
   fixes_applied:
     description: 'Whether any fixes were applied'
